--- a/src/main/resources/templates/product/list.html
+++ b/src/main/resources/templates/product/list.html
@@ -28,10 +28,10 @@
             <!-- 상품목록 -->
             <table border="0">
                 <tr th:each="product:${products.dtoList}">
-                    <td><a th:href="@{/product/view(prodNo=${product.prodNo})}" class="thumb"><img src="https://via.placeholder.com/120x120" alt="상품이미지"/></a></td>
+                    <td><a th:href="@{/product/view(prodCate1=${pageRequestDTO.prodCate1},prodCate2=${pageRequestDTO.prodCate2},prodNo=${product.prodNo})}" class="thumb"><img src="https://via.placeholder.com/120x120" alt="상품이미지"/></a></td>
                     <td>
-                        <h3 class="name"><a th:href="@{/product/view(prodNo=${product.prodNo})}">[[${product.prodName}]]</a></h3>
-                        <a th:href="@{/product/view(prodNo=${product.prodNo})}" class="desc">[[${product.descript}]]</a>
+                        <h3 class="name"><a th:href="@{/product/view(prodCate1=${pageRequestDTO.prodCate1},prodCate2=${pageRequestDTO.prodCate2},prodNo=${product.prodNo})}">[[${product.prodName}]]</a></h3>
+                        <a th:href="@{/product/view(prodCate1=${pageRequestDTO.prodCate1},prodCate2=${pageRequestDTO.prodCate2},prodNo=${product.prodNo})}" class="desc">[[${product.descript}]]</a>
                     </td>
                     <td>
                         <ul>
