--- a/src/main/resources/templates/fragments/cs_layout.html
+++ b/src/main/resources/templates/fragments/cs_layout.html
@@ -8,8 +8,10 @@
     <link rel="shortcut icon" type="image/x-icon" th:href="@{/images/favicon.ico}"/>
     <link rel="stylesheet" th:href="@{/css/cs.css}" type="text/css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"/>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+    <script th:src="@{/js/cs_layout.js}"></script>
   </head>
   <body>
     <div id="wrapper">
@@ -63,6 +65,9 @@
                 </th:block>
               </ul>
             </aside>
+            <input type="hidden" name="success" th:value="${success}"/>
+            <input type="hidden" name="path"    th:value="${path}"/>
+            <input type="hidden" name="cate1"   th:value="${cate1Info.cate1}"/>
             <article layout:fragment="content">
 
               <!--
