--- a/src/main/resources/templates/cs/faq/view.html
+++ b/src/main/resources/templates/cs/faq/view.html
@@ -15,6 +15,8 @@
 
       </p>
     </div>
-    <a th:href="@{/cs/faq/list}" class="btnList">목록보기</a>
+    <div id="buttons">
+      <a th:href="@{/cs/faq/list}" class="btnList">목록보기</a>
+    </div>
   </article>
 </html>
