--- a/src/main/resources/templates/cs/notice/view.html
+++ b/src/main/resources/templates/cs/notice/view.html
@@ -16,6 +16,8 @@
 
       </p>
     </div>
-    <a th:href="@{/cs/notice/list}" class="btnList">목록보기</a>
+    <div id="buttons">
+      <a th:href="@{/cs/notice/list}" class="btnList">목록보기</a>
+    </div>
   </article>
 </html>
