--- a/src/main/resources/templates/cs/qna/view.html
+++ b/src/main/resources/templates/cs/qna/view.html
@@ -2,7 +2,11 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{/fragments/cs_layout.html}">
+<head>
+  <script th:src="@{/js/cs_deleteBoard.js}"></script>
+</head>
   <article layout:fragment="content">
+    <input type="hidden" name="no"    th:value="${view.no}">
     <nav>
       <h2 class="title">[[${view.cate2.wrapping}]] [[${view.title}]]</h2>
       <p>
@@ -30,8 +34,8 @@
     <div id="buttons">
       <th:block sec:authorize="isAuthenticated()"
                 th:if="${#authentication.principal.member.uid eq view.uid.uid}">
-        <a th:href="@{/cs/delete(no=${view.no})}" class="btnDelete">삭제</a>
-        <a th:href="@{/cs/modify(no=${view.no})}" class="btnModify">수정</a>
+        <a href="#" th:status="${#authentication.principal.member.uid eq view.uid.uid ? 'true':'false'}" class="btnDelete">삭제</a>
+        <a href="#" class="btnModify">수정</a>
       </th:block>
       <a th:href="@{/cs/qna/list}" class="btnList">목록보기</a>
     </div>
