--- a/src/main/resources/templates/cs/qna/list.html
+++ b/src/main/resources/templates/cs/qna/list.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{/fragments/cs_layout :: content}">
+      layout:decorate="~{/fragments/cs/cs_layout :: content}">
   <article layout:fragment="content">
-    <nav th:replace="~{/fragments/cs_nav :: nav}">
+    <nav th:replace="~{/fragments/cs/cs_nav :: nav}">
       <!-- nav 들어올 영역 -->
     </nav>
     <table>
