--- a/src/main/resources/templates/cs/qna/write.html
+++ b/src/main/resources/templates/cs/qna/write.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{/fragments/cs_layout.html}">
+      layout:decorate="~{/fragments/cs/cs_layout.html}">
 <head>
-  <script th:src="@{/js/cs_qnaCate.js}"></script>
+  <script th:src="@{/js/cs/cs_qnaCate.js}"></script>
 </head>
   <article layout:fragment="content">
     <input type="hidden" name="url" th:value="${url}">
