--- a/src/main/resources/templates/fragments/cs/cs_layout.html
+++ b/src/main/resources/templates/fragments/cs/cs_layout.html
@@ -11,7 +11,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-    <script th:src="@{/js/cs_layout.js}"></script>
+    <script th:src="@{/js/cs/cs_layout.js}"></script>
   </head>
   <body>
     <div id="wrapper">
