--- a/src/main/resources/templates/product/view.html
+++ b/src/main/resources/templates/product/view.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{/fragments/product_layout.html}">
+      layout:decorate="~{/fragments/product/product_layout.html}">
     <head>
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-        <script th:src="@{/js/product_view.js}"></script>
+        <script th:src="@{/js/product/product_view.js}"></script>
     </head>
 <section layout:fragment="content" class="view">
         <!-- 상품 상세페이지 시작 -->
