--- a/src/main/resources/templates/cs/faq/list.html
+++ b/src/main/resources/templates/cs/faq/list.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{/fragments/cs_layout :: content}">
+      layout:decorate="~{/fragments/cs/cs_layout :: content}">
 <head>
-  <script th:src="@{/js/cs_faqList.js}"></script>
+  <script th:src="@{/js/cs/cs_faqList.js}"></script>
 </head>
   <article layout:fragment="content">
-    <nav th:replace="~{/fragments/cs_nav :: nav}">
+    <nav th:replace="~{/fragments/cs/cs_nav :: nav}">
       <!-- nav 들어올 영역 -->
     </nav>
     <div th:each="board, num:${boardList}">
