--- a/src/main/resources/templates/fragments/product/product_layout.html
+++ b/src/main/resources/templates/fragments/product/product_layout.html
@@ -24,13 +24,8 @@
 <body>
 <div id="wrapper">
     <header>
-        <div class="top">
-            <div>
-                <a href="#">로그인</a>
-                <a href="#">회원가입</a>
-                <a href="#">마이페이지</a>
-                <a href="#"><i class="fa fa-shopping-cart" aria-hidden="true"></i>&nbsp;장바구니</a>
-            </div>
+        <div class="top" th:replace="~{/fragments/loginBar}">
+
         </div>
         <div class="logo">
             <div>
