product 장바구니 버튼 구현중...

--- a/src/main/resources/static/css/product.css
+++ b/src/main/resources/static/css/product.css
@@ -86,7 +86,11 @@
     padding: 0 10px;
     border-right: 1px solid #ddd;
 }
-#product > .list > .sort > li > a.on {font-weight: bold;}
+#product > .list > .sort > li > a.on {
+    pointer-events: none;
+    color: red;
+    font-weight: bold;
+}
 
 #product > .list > table {
   width: 100%;
