--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -147,6 +147,11 @@ header > .menu > div > ul > li > a {
   border-left: 1px solid #e9e9e9;
   padding: 0 10px;
 }
+header > .menu > div > ul > li > a.on {
+    pointer-events: none;
+    color: red;
+    font-weight: bold;
+}
 header > .menu > div > ul > li:last-child > a {
   border-right: 1px solid #e9e9e9;
 }
