--- a/src/main/resources/templates/fragments/product/product_layout.html
+++ b/src/main/resources/templates/fragments/product/product_layout.html
@@ -40,11 +40,11 @@
         <div class="menu">
             <div>
                 <ul>
-                    <li><a th:href="@{/product/list(prodCate1=1, prodCate2=1, type='hit')}">히트상품</a></li>
-                    <li><a th:href="@{/product/list(prodCate1=1, prodCate2=1, type='recommend')}">추천상품</a></li>
-                    <li><a th:href="@{/product/list(prodCate1=1, prodCate2=1, type='latest')}">최신상품</a></li>
-                    <li><a th:href="@{/product/list(prodCate1=1, prodCate2=1, type='hot')}">인기상품</a></li>
-                    <li><a th:href="@{/product/list(prodCate1=1, prodCate2=1, type='discount')}">할인상품</a></li>
+                    <li><a th:href="@{/product/list(prodCate1=1, prodCate2=1, type='hit')}" th:class="${pageRequestDTO.type eq 'hit' ? 'on' : 'off'}">히트상품</a></li>
+                    <li><a th:href="@{/product/list(prodCate1=1, prodCate2=1, type='recommend')}" th:class="${pageRequestDTO.type eq 'recommend' ? 'on' : 'off'}">추천상품</a></li>
+                    <li><a th:href="@{/product/list(prodCate1=1, prodCate2=1, type='latest')}" th:class="${pageRequestDTO.type eq 'latest' ? 'on' : 'off'}">최신상품</a></li>
+                    <li><a th:href="@{/product/list(prodCate1=1, prodCate2=1, type='hot')}" th:class="${pageRequestDTO.type eq 'hot' ? 'on' : 'off'}">인기상품</a></li>
+                    <li><a th:href="@{/product/list(prodCate1=1, prodCate2=1, type='discount')}" th:class="${pageRequestDTO.type eq 'discount' ? 'on' : 'off'}">할인상품</a></li>
                 </ul>
                 <ul>
                     <li><a href="#">쿠폰존</a></li>
