--- a/src/main/resources/templates/cs/qna/write.html
+++ b/src/main/resources/templates/cs/qna/write.html
@@ -44,7 +44,7 @@
           </td>
         </tr>
       </table>
-      <div>
+      <div id="buttons">
         <a th:href="@{/cs/qna/list(cate1=${cate1Info.cate1}, pg=${pageRequestDTO.pg})}" class="btnList">취소하기</a>
         <input type="submit" class="btnSubmit" value="등록하기"/>
       </div>
