--- a/src/main/resources/templates/fragments/cs/cs_layout.html
+++ b/src/main/resources/templates/fragments/cs/cs_layout.html
@@ -16,17 +16,10 @@
   <body>
     <div id="wrapper">
       <header>
-        <div class="top">
-          <div>
-            <p>
-              <a th:href="@{/member/login}">로그인</a>
-              <a href="#">회원가입</a>
-              <a href="#">마이페이지</a>
-              <a href="#">
-                <i class="fa fa-shopping-cart" aria-hidden="true"></i>&nbsp;장바구니
-              </a>
-            </p>
-          </div>
+        <div class="top" th:replace="~{/fragments/loginBar}">
+
+          <!--로그인바 들어올 위치-->
+
         </div>
         <div class="logo">
           <div>
