--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -103,10 +103,10 @@
               <li><a th:href="@{/product/list(prodCate1=1, prodCate2=1, type='discount')}">할인상품</a></li>
             </ul>
             <ul>
-              <li><a href="#">공지사항</a></li>
-              <li><a href="#">자주묻는질문</a></li>
-              <li><a href="#">문의하기</a></li>
-              <li><a href="#">고객센터</a></li>
+              <li><a th:href="@{/cs/notice/list}">공지사항</a></li>
+              <li><a th:href="@{/cs/faq/list}">자주묻는질문</a></li>
+              <li><a th:href="@{/cs/qna/list}">문의하기</a></li>
+              <li><a th:href="@{/cs}">고객센터</a></li>
             </ul>
           </div>
         </div>
