--- a/src/main/resources/templates/fragments/member/member_layout.html
+++ b/src/main/resources/templates/fragments/member/member_layout.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      xmlns="http://www.w3.org/1999/html"
-      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
+      xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <title>롯데ON::롯데 온라인 쇼핑몰</title>
@@ -20,15 +19,10 @@
 <body>
 <div id="wrapper">
     <header>
-        <div class="top">
-            <div>
-                <a th:href="@{/member/login}">로그인</a>
-                <a th:href="@{/member/join}">회원가입</a>
-                <th:block sec:authorize="isAuthenticated()">
-                <a href="#">마이페이지</a>
-                <a href="#"><i class="fa fa-shopping-cart" aria-hidden="true"></i>&nbsp;장바구니</a>
-                </th:block>
-            </div>
+        <div class="top" th:replace="~{/fragments/loginBar}">
+            <!--
+                로그인 바
+            -->
         </div>
         <div class="logo">
             <div>
