--- a/src/main/resources/templates/member/signup.html
+++ b/src/main/resources/templates/member/signup.html
@@ -37,7 +37,7 @@
 				<div>
 					<input type="button" class="agree" value="동의하기" />
 				</div>
-				<script th:src="@{/js/terms.js}"></script>
+				<script th:src="@{/js/member/terms.js}"></script>
             </div>
         </main>
     </div>
