--- a/src/main/resources/templates/fragments/admin/admin_layout.html
+++ b/src/main/resources/templates/fragments/admin/admin_layout.html
@@ -26,7 +26,7 @@
         </div>
     </header>
     <main>
-        <aside th:replace="~{/fragments/admin_aside}">
+        <aside th:replace="~{/fragments/admin/admin_aside}">
 
             <!--레이아웃 위치-->
 
